examples/kubeflow/mnist_with_tfjob/kubflowpach/.cache/manifests/manifests-1.0.0/tektoncd/tektoncd-install/overlays/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tektoncd
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /tektoncd/
    rewrite:
      uri: /tektoncd/
    route:
    - destination:
        host: tekton-pipelines-controller.$(namespace).svc.$(clusterDomain)
        port:
          number: 80
